@@ -203,14 +203,14 @@ class ServerState {
   void setId(std::string const&);
 
   /// @brief get the short id
-  uint32_t getShortId();
+  uint32_t getShortId() const;
 
   /// @brief set the server short id
   void setShortId(uint32_t);
 
   uint64_t getRebootId() const;
 
-  void setRebootId(uint64_t const rebootId);
+  void setRebootId(uint64_t rebootId);
 
   /// @brief get the server endpoint
   std::string getEndpoint();
@@ -256,8 +256,8 @@ class ServerState {
   /// @brief sets server mode and propagates new mode to agency
   Result propagateClusterReadOnly(bool);
 
-  /// file where the server persists it's UUID
-  std::string getUuidFilename();
+  /// file where the server persists its UUID
+  std::string getUuidFilename() const;
 
  private:
   /// @brief atomically fetches the server role
@@ -278,12 +278,15 @@ class ServerState {
   ResultT<uint64_t> readRebootIdFromAgency(AgencyComm& comm);
 
   /// @brief register at agency, might already be done
-  bool registerAtAgencyPhase1(AgencyComm&, const RoleEnum&);
+  bool registerAtAgencyPhase1(AgencyComm&, RoleEnum const&);
 
   /// @brief write the Current/ServersRegistered entry
-  bool registerAtAgencyPhase2(AgencyComm&, bool const hadPersistedId);
+  bool registerAtAgencyPhase2(AgencyComm&, bool hadPersistedId);
 
   void setFoxxmasterSinceNow();
+
+  /// @brief whether or not "value" is a server UUID
+  bool isUuid(std::string const& value) const;
 
  private:
   /// @brief server role
@@ -333,10 +336,10 @@ class ServerState {
 
   /// @brief whether or not the cluster was initialized
   bool _initialized;
+  
+  bool _foxxmasterQueueupdate;
 
   std::string _foxxmaster;
-
-  bool _foxxmasterQueueupdate;
 
   // @brief point in time since which this server is the Foxxmaster
   TRI_voc_tick_t _foxxmasterSince;
